--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
   <section id="press">
     <div class="text-center pb-4">
-      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+      <img class="press-logo" src="images/techCrunch.png" alt="tc-logo">
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
       <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
