--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   
   <link rel="stylesheet" href="css/refactor-styles.css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
     <div class="row">
       <div class="col-lg-6 title-div">
         <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
-        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-dark btn-lg download-button apple-button"><i class="fa-brands fa-apple"></i> Download</button>
         
         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
       </div>
@@ -132,7 +133,7 @@
 
   <section id="press">
     <div class="text-center pb-4">
-      <img class="press-logo" src="images/techCrunch.png" alt="tc-logo">
+      <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
       <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -159,7 +160,7 @@
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
             <div class="d-grid gap-2">
-              <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+              <button type="button" class="btn btn-lg btn-dark pricing-button">Sign Up</button>
             </div>
           </div>
       </div>
@@ -176,7 +177,7 @@
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
             <div class="d-grid gap-2">
-              <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+              <button type="button" class="btn btn-lg btn-dark pricing-button">Sign Up</button>
             </div>
           </div>
         </div>
@@ -194,7 +195,7 @@
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
             <div class="d-grid gap-2">
-              <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
+              <button type="button" class="btn btn-lg btn-dark pricing-button">Sign Up</button>
             </div>
           </div>
         </div>
@@ -208,7 +209,7 @@
   <section id="cta" class="container-fluid text-center">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-dark btn-lg download-button apple-button"><i class="fa-brands fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
